# VoxelEngine

./: .gitmodules  CMakeLists.txt
VoxelEngineCore/: CMakeLists.txt
VoxelEngineCore/includes/: Events.hpp  Window.hpp
VoxelEngineCore/src/: Events.cpp  Window.cpp
VoxelEngineEditor/: CMakeLists.txt
VoxelEngineEditor/src/: main.cpp
